--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <!-- Header Start -->
-    <header>
+    <header class="container">
         <div class="logo-text">
             <h2>Influencer products</h2>
         </div>
@@ -35,12 +35,14 @@
 
     <main>
         <!-- Banner section Start -->
-        <section>
-            <div class="banner-left">
+        <section class="container banner">
+            <div class="banner-left ">
                 <h1>Start your Journey as Influencer</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem
                     vestibulum sed scelerisque eros. Lectus faucibus.</p>
-                <button>Preebook now <i class="fas fa-arrow-right"></i></button>
+
+                <a class="btn" href="http://">Preebook now <i class="fas fa-arrow-right"></i></a>
+
 
             </div>
             <div class="banner-right">
@@ -50,15 +52,240 @@
 
         <!-- Banner section End -->
 
+        <!-- Popular Collection -->
+
+        <section class=" popular-collection">
+            <div class="popular-collection-header">
+                <h2>Popular Collection</h2>
+            </div>
+            <div class="collection">
+                <div class="product">
+                    <img src="images/tripod.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <p class="price">$50.48</p>
+                    <div class="rating">
+                        <span class="stars">
+                            <ul>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star-half-alt"></i></li>
+                            </ul>
+                        </span>
+                        <span class="rating-num">
+                            <p>5.00</p>
+                        </span>
+                    </div>
+                    <p>Wordwide shifting available</p>
+                    <p>Buyers protection possible</p>
+                </div>
+                <div class="product">
+                    <img src="images/tripod.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <p class="price">$50.48</p>
+                    <div class="rating">
+                        <span class="stars">
+                            <ul>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star-half-alt"></i></li>
+                            </ul>
+                        </span>
+                        <span class="rating-num">
+                            <p>5.00</p>
+                        </span>
+                    </div>
+                    <p>Wordwide shifting available</p>
+                    <p>Buyers protection possible</p>
+                </div>
+                <div class="product">
+                    <img src="images/tripod.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <p class="price">$50.48</p>
+                    <div class="rating">
+                        <span class="stars">
+                            <ul>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star-half-alt"></i></li>
+                            </ul>
+                        </span>
+                        <span class="rating-num">
+                            <p>5.00</p>
+                        </span>
+                    </div>
+                    <p>Wordwide shifting available</p>
+                    <p>Buyers protection possible</p>
+                </div>
+                <div class="product">
+                    <img src="images/tripod.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <p class="price">$50.48</p>
+                    <div class="rating">
+                        <span class="stars">
+                            <ul>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star-half-alt"></i></li>
+                            </ul>
+                        </span>
+                        <span class="rating-num">
+                            <p>5.00</p>
+                        </span>
+                    </div>
+                    <p>Wordwide shifting available</p>
+                    <p>Buyers protection possible</p>
+                </div>
+                <div class="product">
+                    <img src="images/tripod.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <p class="price">$50.48</p>
+                    <div class="rating">
+                        <span class="stars">
+                            <ul>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star-half-alt"></i></li>
+                            </ul>
+                        </span>
+                        <span class="rating-num">
+                            <p>5.00</p>
+                        </span>
+                    </div>
+                    <p>Wordwide shifting available</p>
+                    <p>Buyers protection possible</p>
+                </div>
+                <div class="product">
+                    <img src="images/tripod.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <p class="price">$50.48</p>
+                    <div class="rating">
+                        <span class="stars">
+                            <ul>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star-half-alt"></i></li>
+                            </ul>
+                        </span>
+                        <span class="rating-num">
+                            <p>5.00</p>
+                        </span>
+                    </div>
+                    <p>Wordwide shifting available</p>
+                    <p>Buyers protection possible</p>
+                </div>
+                <div class="product">
+                    <img src="images/tripod.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <p class="price">$50.48</p>
+                    <div class="rating">
+                        <span class="stars">
+                            <ul>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star-half-alt"></i></li>
+                            </ul>
+                        </span>
+                        <span class="rating-num">
+                            <p>5.00</p>
+                        </span>
+                    </div>
+                    <p>Wordwide shifting available</p>
+                    <p>Buyers protection possible</p>
+                </div>
+                <div class="product">
+                    <img src="images/tripod.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <p class="price">$50.48</p>
+                    <div class="rating">
+                        <span class="stars">
+                            <ul>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star-half-alt"></i></li>
+                            </ul>
+                        </span>
+                        <span class="rating-num">
+                            <p>5.00</p>
+                        </span>
+                    </div>
+                    <p>Wordwide shifting available</p>
+                    <p>Buyers protection possible</p>
+                </div>
+                <div class="product">
+                    <img src="images/tripod.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <p class="price">$50.48</p>
+                    <div class="rating">
+                        <span class="stars">
+                            <ul>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star-half-alt"></i></li>
+                            </ul>
+                        </span>
+                        <span class="rating-num">
+                            <p>5.00</p>
+                        </span>
+                    </div>
+                    <p>Wordwide shifting available</p>
+                    <p>Buyers protection possible</p>
+                </div>
+
+            </div>
+            <div class="see-more">
+                <a class="see-more-link" href="#">See more<i class="fas fa-arrow-right"></i></a>
+            </div>
+        </section>
+        <!-- Featured sections start -->
+        <section class="container featured">
+            <div class="featured-left">
+                <img src="images/gear.png" alt="">
+            </div>
+            <div class="featured-right">
+                <h1>Featured products at one place</h1>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </p>
+                <a class="btn" href="http://">Join Now <i class="fas fa-arrow-right"></i></a>
+            </div>
+        </section>
     </main>
 
+    <footer class="footer-section">
+        <div class="footer-contain">
+            <h3>Influencer products</h3>
+            <p>Copyright &copy 2020 influencer products</p>
+            <p>All rights reserved</p>
+            <span class="contact-social-media">
+                <ul>
+                    <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                    <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                    <li><a href=""><i class="fab fa-youtube"></i></a></li>
+                </ul>
+            </span>
 
 
-
-
-
-
-
+        </div>
+    </footer>
 </body>
 
 </html>
