Final With mobile max 480px

--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
         <section class="container banner">
             <div class="banner-left ">
                 <h1>Start your Journey as Influencer</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem
-                    vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <p>Many of us may have what it takes to be Instagram influencers, but often, we become camera conscious,
+                    which discourages us from doing it.Being camera conscious stems from low assertiveness, social
+                    anxiety, or feeling self-conscious in public. A camera conscious person can become nervous, awkward,
+                    or tongue-tied on screen, which translates to them not being able to present and focus.</p>
 
                 <a class="btn" href="http://">Preebook now <i class="fas fa-arrow-right"></i></a>
 
@@ -52,7 +54,7 @@
 
         <!-- Banner section End -->
 
-        <!-- Popular Collection -->
+        <!-- Popular Collection Start -->
 
         <section class=" popular-collection">
             <div class="popular-collection-header">
@@ -74,14 +76,35 @@
                             </ul>
                         </span>
                         <span class="rating-num">
-                            <p>5.00</p>
+                            <p>4.99</p>
                         </span>
                     </div>
                     <p>Wordwide shifting available</p>
                     <p>Buyers protection possible</p>
                 </div>
                 <div class="product">
-                    <img src="images/tripod.png" alt="">
+                    <img src="images/mic.png" alt="">
+                    <h3>Microphone</h3>
+                    <p class="price">$120.25</p>
+                    <div class="rating">
+                        <span class="stars">
+                            <ul>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star-half-alt"></i></li>
+                            </ul>
+                        </span>
+                        <span class="rating-num">
+                            <p>4.99</p>
+                        </span>
+                    </div>
+                    <p>Wordwide shifting available</p>
+                    <p>Buyers protection possible</p>
+                </div>
+                <div class="product">
+                    <img src="images/camera.png" alt="">
                     <h3>Flex Tripod</h3>
                     <p class="price">$50.48</p>
                     <div class="rating">
@@ -102,7 +125,7 @@
                     <p>Buyers protection possible</p>
                 </div>
                 <div class="product">
-                    <img src="images/tripod.png" alt="">
+                    <img src="images/action.png" alt="">
                     <h3>Flex Tripod</h3>
                     <p class="price">$50.48</p>
                     <div class="rating">
@@ -123,7 +146,7 @@
                     <p>Buyers protection possible</p>
                 </div>
                 <div class="product">
-                    <img src="images/tripod.png" alt="">
+                    <img src="images/drone.png" alt="">
                     <h3>Flex Tripod</h3>
                     <p class="price">$50.48</p>
                     <div class="rating">
@@ -144,7 +167,49 @@
                     <p>Buyers protection possible</p>
                 </div>
                 <div class="product">
-                    <img src="images/tripod.png" alt="">
+                    <img src="images/airpod.png" alt="">
+                    <h3>Flex Tripod</h3>
+                    <p class="price">$50.48</p>
+                    <div class="rating">
+                        <span class="stars">
+                            <ul>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star-half-alt"></i></li>
+                            </ul>
+                        </span>
+                        <span class="rating-num">
+                            <p>4.99</p>
+                        </span>
+                    </div>
+                    <p>Wordwide shifting available</p>
+                    <p>Buyers protection possible</p>
+                </div>
+                <div class="product">
+                    <img src="images/lights.png" alt="">
+                    <h3>FLight Setup</h3>
+                    <p class="price">$1200.00</p>
+                    <div class="rating">
+                        <span class="stars">
+                            <ul>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star-half-alt"></i></li>
+                            </ul>
+                        </span>
+                        <span class="rating-num">
+                            <p>5.00</p>
+                        </span>
+                    </div>
+                    <p>Wordwide shifting available</p>
+                    <p>Buyers protection possible</p>
+                </div>
+                <div class="product">
+                    <img src="images/mic.png" alt="">
                     <h3>Flex Tripod</h3>
                     <p class="price">$50.48</p>
                     <div class="rating">
@@ -165,70 +230,7 @@
                     <p>Buyers protection possible</p>
                 </div>
                 <div class="product">
-                    <img src="images/tripod.png" alt="">
-                    <h3>Flex Tripod</h3>
-                    <p class="price">$50.48</p>
-                    <div class="rating">
-                        <span class="stars">
-                            <ul>
-                                <li><i class="fas fa-star"></i></li>
-                                <li><i class="fas fa-star"></i></li>
-                                <li><i class="fas fa-star"></i></li>
-                                <li><i class="fas fa-star"></i></li>
-                                <li><i class="fas fa-star-half-alt"></i></li>
-                            </ul>
-                        </span>
-                        <span class="rating-num">
-                            <p>5.00</p>
-                        </span>
-                    </div>
-                    <p>Wordwide shifting available</p>
-                    <p>Buyers protection possible</p>
-                </div>
-                <div class="product">
-                    <img src="images/tripod.png" alt="">
-                    <h3>Flex Tripod</h3>
-                    <p class="price">$50.48</p>
-                    <div class="rating">
-                        <span class="stars">
-                            <ul>
-                                <li><i class="fas fa-star"></i></li>
-                                <li><i class="fas fa-star"></i></li>
-                                <li><i class="fas fa-star"></i></li>
-                                <li><i class="fas fa-star"></i></li>
-                                <li><i class="fas fa-star-half-alt"></i></li>
-                            </ul>
-                        </span>
-                        <span class="rating-num">
-                            <p>5.00</p>
-                        </span>
-                    </div>
-                    <p>Wordwide shifting available</p>
-                    <p>Buyers protection possible</p>
-                </div>
-                <div class="product">
-                    <img src="images/tripod.png" alt="">
-                    <h3>Flex Tripod</h3>
-                    <p class="price">$50.48</p>
-                    <div class="rating">
-                        <span class="stars">
-                            <ul>
-                                <li><i class="fas fa-star"></i></li>
-                                <li><i class="fas fa-star"></i></li>
-                                <li><i class="fas fa-star"></i></li>
-                                <li><i class="fas fa-star"></i></li>
-                                <li><i class="fas fa-star-half-alt"></i></li>
-                            </ul>
-                        </span>
-                        <span class="rating-num">
-                            <p>5.00</p>
-                        </span>
-                    </div>
-                    <p>Wordwide shifting available</p>
-                    <p>Buyers protection possible</p>
-                </div>
-                <div class="product">
-                    <img src="images/tripod.png" alt="">
+                    <img src="images/single-light.png" alt="">
                     <h3>Flex Tripod</h3>
                     <p class="price">$50.48</p>
                     <div class="rating">
@@ -254,6 +256,8 @@
                 <a class="see-more-link" href="#">See more<i class="fas fa-arrow-right"></i></a>
             </div>
         </section>
+        <!-- Popular Collection Start -->
+
         <!-- Featured sections start -->
         <section class="container featured">
             <div class="featured-left">
@@ -261,14 +265,17 @@
             </div>
             <div class="featured-right">
                 <h1>Featured products at one place</h1>
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                    duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                <p>Fine Detail Performance: 16 megapixel micro four thirds sensor with no low pass filter resulting in a
+                    near 10 percent boost in fine detail resolving power over existing 16 megapixel micro four thirds
+                    sensors; Color temperature setting 2500 to 10000K in 100K
                 </p>
                 <a class="btn" href="http://">Join Now <i class="fas fa-arrow-right"></i></a>
             </div>
         </section>
     </main>
+    <!-- Featured sections start -->
 
+    <!-- Footer Section Start -->
     <footer class="footer-section">
         <div class="footer-contain">
             <h3>Influencer products</h3>
@@ -282,10 +289,9 @@
                     <li><a href=""><i class="fab fa-youtube"></i></a></li>
                 </ul>
             </span>
-
-
         </div>
     </footer>
+    <!-- Footer Section Start -->
 </body>
 
 </html>
