--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
         <section class="container banner">
             <div class="banner-left ">
                 <h1>Start your Journey as Influencer</h1>
-                <p>Many of us may have what it takes to be Instagram influencers, but often, we become camera conscious,
-                    which discourages us from doing it.Being camera conscious stems from low assertiveness, social
-                    anxiety, or feeling self-conscious in public. A camera conscious person can become nervous, awkward,
+                <p> A camera conscious person can become nervous, awkward,
                     or tongue-tied on screen, which translates to them not being able to present and focus.</p>
 
                 <a class="btn" href="http://">Preebook now <i class="fas fa-arrow-right"></i></a>
